# pal-ussd-app

./: MyUSSDService.py  Router.py  flet.yaml  main.py  main3.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  upload_to_dropbox.yml
github/workflows/.github/workflows/: build.yml
res/xml/: accessibility_service_config.xml  ussd_service_config.xml
views/: HomeView.py  Home_view.py  accessibility_service.py  home_view.py  test_view.py
